@@ -3,6 +3,8 @@
 
 #include <gtk/gtk.h>
 
+extern gboolean show_status;
+
 void build_menubar (GtkWidget *vbox);
 void open_object (GtkWidget *widget, gpointer   data);
 void new_object (GtkWidget *widget, gpointer   data);
