@@ -1,0 +1,7 @@
+#ifndef RESOURCES_H
+#define RESOURCES_H
+
+void save_resources ();
+void restore_resources ();
+
+#endif  /* RESOURCES_H */
